[gd_scene load_steps=2 format=3 uid="uid://beyf1yuvlljo6"]

[ext_resource type="Script" uid="uid://s715gid6tnxx" path="res://scripts/ui/GraveyardViewer.gd" id="1_j5js7"]

[node name="GraveyardViewer" type="Control"]
layout_mode = 3
anchor_left = 0.45100003
anchor_top = 0.38000003
anchor_right = 0.549
anchor_bottom = 0.619
offset_left = 94.079956
offset_top = 129.59998
offset_right = -94.08008
offset_bottom = -128.52002
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j5js7")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = -130.0
offset_right = 94.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.827451, 0.92941177, 0.90588236, 0.60784316)

[node name="CloseArea" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.0
offset_top = -130.5
offset_right = 97.0
offset_bottom = 130.5
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.0
offset_top = -130.0
offset_right = 95.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Cemit√©rio"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CardGrid" type="GridContainer" parent="Panel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Fechar"
